<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <TextView
        android:id="@+id/add_user_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_half"
        android:text="@string/add_user"
        android:textColor="@color/darker_gray"
        android:textSize="@dimen/header_font_size" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="left"
        android:orientation="horizontal"
        android:padding="@dimen/padding_half">

        <TextView
            android:id="@+id/cancel_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_half"
            android:text="@android:string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/color_accent" />

        <TextView
            android:id="@+id/save_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_half"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/color_accent" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons_container"
        android:layout_below="@id/add_user_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/photo_add"
                android:layout_width="@dimen/big_image_size"
                android:layout_height="@dimen/big_image_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/padding_half"
                android:background="@drawable/ic_noperson"
                android:scaleType="centerCrop" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_name"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/name"
                    android:inputType="textNoSuggestions"
                    android:maxLength="64" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_age"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_age"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:maxLength="2" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/gender_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/gender"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/header_font_size" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_gender"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/gender_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male_radio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female_radio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/other_radio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/other" />
                </RadioGroup>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/edit_hobby_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_hobby"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edit_hobby"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/edit_text_height"
                            android:hint="@string/hobby"
                            android:inputType="textNoSuggestions"
                            android:maxLength="64"
                            android:paddingRight="@dimen/edit_text_padding" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/add_hobby_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:paddingRight="@dimen/padding_half"
                        android:text="@string/add"
                        android:textColor="@color/color_accent"
                        android:textSize="@dimen/item_font_size" />


                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/items_hobby_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>