<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:fitsSystemWindows="true"
            android:padding="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="@drawable/ic_arrow_left"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="top"
                    android:background="@drawable/ic_action_delete"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="@dimen/big_image_size"
                        android:layout_height="@dimen/big_image_size"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:background="@drawable/ic_noperson"
                        android:scaleType="centerCrop"
                        android:transitionName="primary_image" />

                    <TextView
                        android:id="@+id/name_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:text="Albert Thomas" />
                </LinearLayout>
            </RelativeLayout>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="@color/darker_gray"
                    android:textSize="@dimen/header_font_size" />

                <TextView
                    android:id="@+id/age_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/item_font_size"
                    android:transitionName="age_text"
                    tools:text="32yo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/gender"
                    android:textColor="@color/darker_gray"
                    android:textSize="@dimen/header_font_size" />

                <TextView
                    android:id="@+id/gender_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/item_font_size"
                    tools:text="Male" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/hobby_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:text="@string/hobby"
                        android:textColor="@color/darker_gray"
                        android:textSize="@dimen/header_font_size" />

                    <TextView
                        android:id="@+id/update_hobby_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/hobby_header"
                        android:layout_alignParentRight="true"
                        android:text="@string/edit"
                        android:textColor="@color/color_accent"
                        android:textSize="@dimen/item_font_size" />

                    <TextView
                        android:id="@+id/discard_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/hobby_header"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:layout_toLeftOf="@id/update_hobby_text"
                        android:text="@string/discard"
                        android:textColor="@color/color_accent"
                        android:textSize="@dimen/item_font_size"
                        android:visibility="gone" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/edit_hobby_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_hobby"
                        style="@style/TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent_edit">

                            <TextView
                                android:id="@+id/add_hobby_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:paddingRight="@dimen/padding_half"
                                android:text="@string/add"
                                android:textColor="@color/color_accent"
                                android:textSize="@dimen/item_font_size" />

                            <EditText
                                android:id="@+id/edit_hobby"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toLeftOf="@id/add_hobby_text"
                                android:hint="Add Hobby"
                                android:padding="@dimen/padding_half"
                                android:textColor="@color/dark_gray"
                                android:textSize="@dimen/item_font_size" />
                        </RelativeLayout>
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/items_hobby_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/hobby_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/item_font_size"
                    tools:text="chess" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
